@@ -20,17 +20,20 @@ import time
 
 from rcsb.utils.io.FileUtil import FileUtil
 from rcsb.utils.io.MarshalUtil import MarshalUtil
+from rcsb.utils.io.StashableBase import StashableBase
 
 logger = logging.getLogger(__name__)
 
 
-class CARDTargetOntologyProvider:
+class CARDTargetOntologyProvider(StashableBase):
     """Accessors for CARD ontologies."""
 
     def __init__(self, **kwargs):
         #
         self.__cachePath = kwargs.get("cachePath", ".")
-        self.__dirPath = os.path.join(self.__cachePath, "CARD-ontology")
+        self.__dirName = "CARD-ontology"
+        super(CARDTargetOntologyProvider, self).__init__(self.__cachePath, [self.__dirName])
+        self.__dirPath = os.path.join(self.__cachePath, self.__dirName)
         #
         self.__mU = MarshalUtil(workPath=self.__dirPath)
         self.__oD, self.__tnL, self.__version = self.__reload(self.__dirPath, **kwargs)
@@ -58,6 +61,11 @@ class CARDTargetOntologyProvider:
 
     def getTreeNodeList(self):
         return self.__tnL
+
+    def reload(self):
+        self.__oD, self.__tnL, self.__version = self.__reload(self.__dirPath, useCache=True)
+        ok = self.testCache()
+        return ok
 
     def __reload(self, dirPath, **kwargs):
         oD = None
