@@ -44,10 +44,8 @@ class ChEMBLTargetMechanismProvider(StashableBase):
         logger.info("ChEMBL API MAX_LIMIT %r", Settings.Instance().MAX_LIMIT)  # pylint: disable=no-member
         self.__aD = self.__reload(self.__dirPath, useCache)
 
-    def testCache(self, minCount=0):
-        if minCount == 0:
-            return True
-        if self.__aD and (len(self.__aD) > minCount):
+    def testCache(self, minCount=1):
+        if self.__aD and (len(self.__aD) >= minCount):
             logger.info("Mechanism data for (%d) targets", len(self.__aD))
             return True
         return False
@@ -57,6 +55,10 @@ class ChEMBLTargetMechanismProvider(StashableBase):
 
     def getTargetMechanismDataPath(self):
         return os.path.join(self.__dirPath, "chembl-target-mechanism-data.json")
+
+    def reload(self):
+        self.__aD = self.__reload(self.__dirPath, useCache=True)
+        return True
 
     def __reload(self, dirPath, useCache):
         startTime = time.time()
