@@ -31,13 +31,13 @@ class ChEMBLTargetProvider:
         #
         self.__cachePath = cachePath
         self.__dirPath = os.path.join(self.__cachePath, "ChEMBL-targets")
-        baseVersion = 31
+        baseVersion = 33
         self.__version = baseVersion
         self.__mapD = self.__reload(self.__dirPath, baseVersion, useCache, **kwargs)
         #
 
-    def testCache(self, minCount=0):
-        return self.__mapD and len(self.__mapD) > minCount
+    def testCache(self, minCount=1):
+        return self.__mapD and len(self.__mapD) >= minCount
 
     def getAssignmentVersion(self):
         return self.__version
@@ -58,10 +58,13 @@ class ChEMBLTargetProvider:
     def getTargetDataPath(self):
         return os.path.join(self.__dirPath, "chembl-target-data.json")
 
+    def reload(self):
+        self.__mapD = self.__reload(self.__dirPath, self.__version, useCache=True)
+
     def __reload(self, dirPath, baseVersion, useCache, **kwargs):
         startTime = time.time()
         mU = MarshalUtil(workPath=dirPath)
-        chemblDbUrl = kwargs.get("ChEMBLDbUrl", "ftp://ftp.ebi.ac.uk/pub/databases/chembl/ChEMBLdb/latest/")
+        chemblDbUrl = kwargs.get("ChEMBLDbUrl", "https://ftp.ebi.ac.uk/pub/databases/chembl/ChEMBLdb/latest/")
         ok = False
         fU = FileUtil()
         fU.mkdir(dirPath)
